# nillion-federated-learning

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: README.md
examples/cifar10/: client.py  dataset.py  model.py
examples/conv_net/: README.md  client.py  dataset.py  model.py  server.py
examples/logistic_regression/: README.md  client.py  dataset.py  model.py  server.py
examples/neural_net/: README.md  client.py  dataset.py  model.py
examples/neural_net_5/: README.md  client.py  model.py  server.py
nillion_fl/: __init__.py  client.py  fl_service.proto  logs.py  net_client.py  net_server.py  old_server.py  server.py
nillion_fl/core/: client.py  server.py
nillion_fl/core/client/: grpc_client.py  nillion_integration.py
nillion_fl/core/server/: client_manager.py  client_state.py  learning_manager.py  nillion_integration.py  servicer.py
nillion_fl/fl_net/: README.md  fl_service.proto  fl_service_pb2.py  fl_service_pb2_grpc.py
nillion_fl/grpc/: fl_service.proto  fl_service_pb2.py  fl_service_pb2_grpc.py
nillion_fl/heartbeat/: client.py  servicer.py
nillion_fl/heartbeat/network/: README.md  heartbeat.proto  heartbeat_pb2.py  heartbeat_pb2_grpc.py
nillion_fl/network/: README.md  fl_service.proto  fl_service_pb2.py  fl_service_pb2_grpc.py  heartbeat.proto
nillion_fl/nillion_network/: client.py  component.py  server.py  utils.py
nillion_fl/nillion_network/fed_avg/: nada-project.toml
nillion_fl/nillion_network/fed_avg/src/: config.py  custom_fed_avg.py  fed_avg.py  fed_avg.py.jinja
nillion_fl/nillion_network/fed_avg/tests/: fed_avg.yaml
nillion_fl/nilvm/: client.py  component.py  server.py  utils.py
nillion_fl/nilvm/fed_avg/: nada-project.toml  nada-project.toml.jinja
nillion_fl/nilvm/fed_avg/src/: custom_fed_avg.py  fed_avg.py  fed_avg.py.jinja
nillion_fl/pytorch/: __init__.py  client.py  server.py
tests/: test_net_server.py
tests/nillion_multiparty_example/: client.py  server.py
