[tool.poetry]
name = "nillion-fl"
version = "0.1.0"
description = ""
authors = ["José Cabrero-Holgueras <jose.cabrero@nillion.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
grpcio = "^1.64.1"
grpcio-tools = "^1.64.1"
torch = {version="^2.3.1", optional=true}
torchvision = {version="^0.18.1", optional=true}
numpy = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pylint = "^3.2.3"
mypy = "^1.10.0"
grpcio-testing = "^1.64.1"

[tool.poetry.extras]
examples = ["numpy", "pytorch", "torchvision"]