[tool.poetry]
name = "nillion-fl"
version = "0.1.0"
description = ""
authors = ["José Cabrero-Holgueras <jose.cabrero@nillion.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
grpcio = "^1.64.1"
grpcio-tools = "1.62.1"
torch = {version="^2.3.1", optional=true}
torchvision = {version="^0.18.1", optional=true}
numpy = "^1.26.4"
nada-dsl = "^0.5.0"
py-nillion-client = "^0.5.0"
nada-numpy = "^0.4.0"
nillion-python-helpers = "^0.2.3"
jinja2 = "^3.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pylint = "^3.2.3"
mypy = "^1.10.0"
grpcio-testing = "1.62.1"

[tool.poetry.extras]
examples = ["numpy", "pytorch", "torchvision"]
dev = ["pytest", "pylint", "mypy", "grpcio-testing"]

[tool.poetry.scripts]
fl_client = 'nillion_fl.client:main'
fl_server = 'nillion_fl.server:main'
lr_client = 'examples.logistic_regression.client:main'
lr_server = 'examples.logistic_regression.server:main'